deploy/k8s/service/product-admin/product-admin-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-admin-svc
  namespace: shopping
  labels:
    app.kubernetes.io/name: product-admin-svc
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: product-admin
    app.kubernetes.io/version: v1.0
  ports:
    - name: http
      port: 80
      targetPort: 8082
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product-admin
  namespace: shopping
  labels:
    app.kubernetes.io/name: product-admin
    app.kubernetes.io/version: v1.0
spec:
  serviceName: product-admin-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: product-admin
      app.kubernetes.io/version: v1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product-admin
        app.kubernetes.io/version: v1.0
    spec:
      containers:
        - name: product-admin
          image: localhost:5000/go-shopping-poc/product-admin:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-admin-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: product-admin-ingress
    app.kubernetes.io/token: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
spec:
  rules:
    - host: pocstore.local
      http:
        paths:
          - path: /api/v1/admin/products
            pathType: Prefix
            backend:
              service:
                name: product-admin-svc
                port:
                  number: 80
  tls:
    - hosts:
        - pocstore.local
      secretName: pocstorelocal-tls
